--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
        <table>
 
         <tr>
-           <td style="text-align: center; vertical-align: middle;"><a href="">Pump ver.</a></td>
+           <td style="text-align: center; vertical-align: middle;"><a href="https://nikkizzang2-cloud.github.io/info/">Pump ver.</a></td>
         </tr>
 
       </table>
